Basic form to create todos

--- a/src/stylesheets/components/_todo-item.scss
+++ b/src/stylesheets/components/_todo-item.scss
@@ -15,6 +15,10 @@
     border-radius: 5px;
     padding: 5px;
 
+    &.completed {
+      text-decoration: line-through;
+    }
+
     input[type=checkbox] {
       margin-right: 1em;
     }
