--- a/src/stylesheets/components.scss
+++ b/src/stylesheets/components.scss
@@ -5,4 +5,4 @@
 @import "components/base";
 @import "components/todo-item";
 @import "components/project";
-@import "components/project-list";
+@import "components/project-lists";
